--- a/src/components/PostCard.module.css
+++ b/src/components/PostCard.module.css
@@ -18,9 +18,10 @@
 }
 
 /* Descrição do post */
-.postCard p {
+.postCard .description {
     color: #666; /* Cinza mais escuro para o texto */
     line-height: 1.5; 
+    overflow: hidden; /* Garante que o texto não transborde */
 }
 
 /* Informações sobre a publicação */
@@ -36,23 +37,15 @@
 /* Comentários e curtidas */
 .comments, .likes, .dislikes {
     font-size: 14px;
-    color: #555; /* Um tom de cinza intermediário */
+    color: #555; 
     margin-top: 5px;
 }
 
-/* Responsividade para telas maiores */
-@media (min-width: 600px) {
-    .postCard {
-        padding: 30px;
-        margin: 20px auto;
-        max-width: 80%;
-    }
-}
 
 /* Botões ou ações interativas */
 .button {
-    background-color: #4CAF50; /* Verde para ações positivas como curtir */
-    color: white;
+    background-color: #b6bdb6;
+    color: #2a6496;
     border: none;
     border-radius: 4px;
     padding: 10px 20px;
@@ -60,8 +53,12 @@
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
+    cursor: pointer;  
+    margin-top: 14px;  
+}
+
+.button:hover{
+    background-color: #ff8c00;
 }
 
 .button:disabled {
@@ -71,4 +68,5 @@
 .button.dislike {
     background-color: #f44336; /* Vermelho para ações negativas como descurtir */
 }
+
 
